<resources>
    <string name="app_name">OpenFuraffinityClient</string>
    <string name="siteUrl">www.furaffinity.net</string>
    <string name="notLoaded">Not Loaded</string>
    <string name="notImplementedYet">View not implemented yet.</string>
    <string name="title_activity_navigation_drawer">@string/app_name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_msg_submission">Submissions</string>
    <string name="menu_msg_others">Notifications</string>
    <string name="menu_msg_pms">Notes</string>
    <string name="menu_history">History</string>
    <string name="menu_journal">View Journal</string>
    <string name="menu_msg_pms_message">View Message</string>
    <string name="menu_user">View User</string>
    <string name="menu_view">View Post</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="browseOptions">Browse Options</string>
    <string name="browseCat">Category:</string>
    <string name="browseAtype">Type:</string>
    <string name="browseSpecies">Species:</string>
    <string name="browseGender">Gender:</string>
    <string name="browsePerpage">Results:</string>
    <string name="browsePage">Page #:</string>
    <string name="browseOptionsRating">Filter by Rating</string>
    <string name="browseRatingGeneral">General</string>
    <string name="browseRatingMature">Mature</string>
    <string name="browseRatingAdult">Adult</string>
    <string name="saveBrowseState">saveBrowseState</string>
    <string name="cachedBrowseStateSetting">cachedBrowseStateSetting</string>
    <string name="InvalidateCachedBrowseTimeSetting">InvalidateCachedBrowseTimeSetting</string>
    <string name="InvalidateCachedBrowseAfterSetting">InvalidateCachedBrowseAfterSetting</string>
    <string name="browseCatSetting">browseCat</string>
    <string name="browseAtypeSetting">browseAtype</string>
    <string name="browseSpeciesSetting">browseSpecies</string>
    <string name="browseGenderSetting">browseGender</string>
    <string name="browsePerpageSetting">browsePerpage</string>
    <string name="browseRatingGeneralSetting">browseRatingGeneral</string>
    <string name="browseRatingMatureSetting">browseRatingMature</string>
    <string name="browseRatingAdultSetting">browseRatingAdult</string>
    <string name="searchSearch">Search</string>
    <string name="searchSortCriteria">Sort Criteria</string>
    <string name="searchOrderBy">Order By:</string>
    <string name="searchOrderDirection">Order Direction:</string>
    <string name="searchSortByRange">Sort By Range</string>
    <string name="searchDay">Day</string>
    <string name="search3Days">3 Days</string>
    <string name="searchWeek">Week</string>
    <string name="searchMonth">Month</string>
    <string name="searchAll">All</string>
    <string name="searchSortByRating">Sort By Rating:</string>
    <string name="searchRatingGeneral">General</string>
    <string name="searchRatingMature">Mature</string>
    <string name="searchRatingAdult">Adult</string>
    <string name="searchSortByType">Sort By Type:</string>
    <string name="searchTypeArt">Art</string>
    <string name="searchTypeMusic">Music</string>
    <string name="searchTypeFlash">Flash</string>
    <string name="searchTypeStory">Story</string>
    <string name="searchTypePhoto">Photo</string>
    <string name="searchTypePoetry">Poetry</string>
    <string name="searchSortByMatchingKeywords">Sort By Matching Keywords:</string>
    <string name="searchAny">Any</string>
    <string name="searchExtended">extended</string>
    <string name="searchSave">Save Current Search</string>
    <string name="saveSearchState">saveSearchState</string>
    <string name="cachedSearchStateSetting">cachedSearchStateSetting</string>
    <string name="InvalidateCachedSearchTimeSetting">InvalidateCachedSearchTimeSetting</string>
    <string name="InvalidateCachedSearchAfterSetting">InvalidateCachedSearchAfterSetting</string>
    <string name="searchOrderBySetting">searchOrderBySetting</string>
    <string name="searchOrderDirectionSetting">searchOrderDirectionSetting</string>
    <string name="searchRangeSetting">searchRangeSetting</string>
    <string name="searchRatingGeneralSetting">searchRatingGeneralSetting</string>
    <string name="searchRatingMatureSetting">searchRatingMatureSetting</string>
    <string name="searchRatingAdultSetting">searchRatingAdultSetting</string>
    <string name="searchTypeArtSetting">searchTypeArtSetting</string>
    <string name="searchTypeMusicSetting">searchTypeMusicSetting</string>
    <string name="searchTypeFlashSetting">searchTypeFlashSetting</string>
    <string name="searchTypeStorySetting">searchTypeStorySetting</string>
    <string name="searchTypePhotoSetting">searchTypePhotoSetting</string>
    <string name="searchTypePoetrySetting">searchTypePoetrySetting</string>
    <string name="searchModeSetting">searchModeSetting</string>
    <string name="title_activity_view">@string/app_name</string>
    <string name="viewTab0">Description</string>
    <string name="viewTab1">Info</string>
    <string name="viewTab2">Keywords</string>
    <string name="viewTab3">Comments</string>
    <string name="viewTab4">Folders</string>
    <string name="viewDownload">Download</string>
    <string name="infoSubmissionComments">Comments:</string>
    <string name="infoSubmissionFavorites">Favorites:</string>
    <string name="infoSubmissionViews">Views:</string>
    <string name="infoSubmissionRating">Rating:</string>
    <string name="infoSubmissionCategory">Category:</string>
    <string name="infoSubmissionSpecies">Species:</string>
    <string name="infoSubmissionGender">Gender:</string>
    <string name="infoSubmissionDate">Posted:</string>
    <string name="infoSubmissionSize">Size:</string>
    <string name="title_activity_user">@string/app_name</string>
    <string name="userTab0">Profile</string>
    <string name="userTab1">Gallery</string>
    <string name="userTab2">Scraps</string>
    <string name="userTab3">Favorites</string>
    <string name="userTab4">Journals</string>
    <string name="userTab5">Commission</string>
    <string name="userTab6">Watched By</string>
    <string name="userTab7">Watching</string>
    <string name="userTab8">Shouts</string>
    <string name="title_activity_profile">@string/app_name</string>
    <string name="profileAccountSettings">Account Settings</string>
    <string name="profileSiteSettings">Site Settings</string>
    <string name="profileUserSettings">User Settings</string>
    <string name="profileUserPageAndProfile">User Page &amp; Profile Information</string>
    <string name="profileContactInfo">Edit Contact Info</string>
    <string name="profileAvatar">Change Avatar</string>
    <string name="profileSubmissions">Manage Submissions</string>
    <string name="profileFolders">Manage Folders</string>
    <string name="profileJournals">Manage Journals</string>
    <string name="profileFavorites">Manage Favorites</string>
    <string name="profileWatches">Manage Watches</string>
    <string name="profileShouts">Manage Shouts</string>
    <string name="profileBadges">Manage Badges</string>
    <string name="userViews">Views</string>
    <string name="userSubmissions">Submissions</string>
    <string name="userFavs">Favs</string>
    <string name="userCommentsEarned">Comments Earned</string>
    <string name="userCommentsMade">Comments Made</string>
    <string name="userJournals">Journals</string>
    <string name="title_activity_journal">@string/app_name</string>
    <string name="journalTab0">Journal</string>
    <string name="journalTab1">Comments</string>
    <string name="loadMore">Load More</string>
    <string name="msgSubmissionOrder">Newest First: </string>
    <string name="msgSubmissionPerpage">Results: </string>
    <string name="msgOthersTab0">Watches</string>
    <string name="msgOthersTab1">Submission Comments</string>
    <string name="msgOthersTab2">Journal Comments</string>
    <string name="msgOthersTab3">Shouts</string>
    <string name="msgOthersTab4">Favorites</string>
    <string name="msgOthersTab5">Journals</string>
    <string name="msgPmsUserNameTextView">User</string>
    <string name="msgPmsSubjectTextView">Subject</string>
    <string name="msgPmsMessageTextView">Message</string>
    <string name="msgPmsFolder">Folder:</string>
    <string name="title_activity_msgpmsmessage">@string/app_name</string>
    <string name="msgPmsMessageTab0">Message</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settingsFile">open.furaffinity.client</string>
    <string name="webClientCookieA">cookieA</string>
    <string name="webClientCookieB">cookieB</string>
    <string name="historyTab0">Journal</string>
    <string name="historyTab1">User</string>
    <string name="historyTab2">View</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="notifications">Notify</string>
    <string name="recyclerVisibleThresholdCount">Image Results Loading Threshold:</string>
    <string name="imageListColumnsCount">Image Results Columns:</string>
    <string name="imageListOrientationLabel">Image Results Scroll Orientation:</string>
    <string name="enablePostLabels">Post Info On Image Results:</string>
    <string name="recyclerVisibleThreshold">recyclerVisibleThreshold</string>
    <string name="imageListColumns">imageListColumns</string>
    <string name="imageListOrientation">imageListOrientation</string>
    <string name="imageListInfo">imageListInfo</string>
    <string name="advertisementsSwitch">Advertisements From FurAffinity</string>
    <string name="notificationsSwitch">Standard Notifications</string>
    <string name="notificationsInterval">Standard Notification Interval(Min):</string>
    <string name="watchNotificationsSwitch">Watch Notifications</string>
    <string name="submissionCommentNotificationsSwitch">Submission Comment Notifications</string>
    <string name="journalCommentNotificationsSwitch">Journal Comment Notifications</string>
    <string name="shoutNotificationsSwitch">Shout Notifications</string>
    <string name="favoriteNotificationsSwitch">Favorite Notifications</string>
    <string name="journalNotificationsSwitch">Journal Notifications</string>
    <string name="noteNotificationsSwitch">Note Notifications</string>
    <string name="submissionNotificationsSwitch">Submission Notifications</string>
    <string name="searchNotificationsSwitch">Search Notifications</string>
    <string name="searchNotificationsInterval">Search Notification Interval(Min):</string>
    <string name="imageResolutionTextView">Select Results Image Resolution:</string>
    <string name="saveBrowseStateSwitch">Persist browse options</string>
    <string name="cachedBrowse">Cached Browse:</string>
    <string name="InvalidateCachedBrowseTime">Invalidate After(Mins):</string>
    <string name="InvalidateCachedBrowseAfter">Invalidate On X New Results:</string>
    <string name="saveSearchStateSwitch">Persist search options</string>
    <string name="trackHistory">Keep History</string>
    <string name="clearHistory">Clear History</string>
    <string name="menu_shareSubmission">Share Submission</string>
    <string name="menu_shareUser">Share User</string>
    <string name="menu_favUnfav">Fav/UnFav</string>
    <string name="menu_watchUnWatch">Watch/UnWatch</string>
</resources>