<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/icon_paw"
            android:title="@string/menu_browse" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/icon_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_user"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/icon_upload"
            android:title="@string/menu_upload" />

        <item
            android:id="@+id/nav_msg_submission"
            android:icon="@drawable/icon_notifications"
            android:title="@string/menu_msg_submission" />

        <item
            android:id="@+id/nav_msg_others"
            android:icon="@drawable/icon_notifications"
            android:title="@string/menu_msg_others" />

        <item
            android:id="@+id/nav_msg_pms"
            android:icon="@drawable/icon_notes"
            android:title="@string/menu_msg_pms" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/icon_history"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/icon_login"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/menu_logout"
            android:visible="false"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_about"
            android:title="@string/menu_about" />
    </group>
</menu>