<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_browse" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_msg_submission"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_msg_submission" />

        <item
            android:id="@+id/nav_msg_others"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_msg_others" />

        <item
            android:id="@+id/nav_msg_pms"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_msg_pms" />

        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_journal" />

        <item
            android:id="@+id/nav_msg_pms_message"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_msg_pms_message" />

        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_user" />

        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_view" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_login" />
    </group>
</menu>
