<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_download"
        android:title="@string/viewDownload"
        android:visible="false" />
    <item
        android:id="@+id/menu_shareSubmission"
        android:title="@string/menu_shareSubmission"
        android:visible="false" />
    <item
        android:id="@+id/menu_shareUser"
        android:title="@string/menu_shareUser"
        android:visible="false" />
    <item
        android:id="@+id/menu_favUnfav"
        android:title="@string/menu_favUnfav"
        android:visible="false" />
    <item
        android:id="@+id/menu_watchUnWatch"
        android:title="@string/menu_watchUnWatch"
        android:visible="false" />
</menu>
