<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragmentDrawersOld.settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:id="@+id/notificationsSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notificationsSwitch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notificationsInterval" />

            <EditText
                android:id="@+id/notificationsInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <Switch
                android:id="@+id/searchNotificationsSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/searchNotificationsSwitch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/searchNotificationsInterval" />

            <EditText
                android:id="@+id/searchNotificationsInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recyclerVisibleThresholdCount" />

            <EditText
                android:id="@+id/recyclerVisibleThresholdCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/imageListColumnsCount" />

            <EditText
                android:id="@+id/imageListColumnsCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <Switch
                android:id="@+id/imageListOrientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imageListOrientationLabel" />

            <Switch
                android:id="@+id/enablePostLabels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enablePostLabels" />


            <Switch
                android:id="@+id/saveBrowseStateSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveBrowseStateSwitch" />

            <Switch
                android:id="@+id/saveSearchStateSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saveSearchStateSwitch" />

            <Switch
                android:id="@+id/trackHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trackHistory" />

            <Button
                android:id="@+id/clearHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clearHistory" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>